* For RFC 2047 MIME "encoded-word" parts in headers, assume that the end of
  each word resets the conversion state (Yedidyah Bar-David).
* When the ORGANIZATION variable has an empty value, do not generate an
  "Organization:" header field. Previously, this condition resulted in
  mailx refusing to send mail (Thomas E. Kammeyer).
* When classifying messages with the junk filter, when selecting the most
  representative tokens, prefer non-junk tokens over junk tokens if both
  have the same (reversed) probability, in order to avoid false positives.
* When calculating the probabilities of tokens that have occurred only in
  good messages or only in junk messages so far, and these tokens occurred
  less than ten times, give them slightly less than the minimum/maximum.

[12.4] released 7/29/08
* With the "-E" command line option or if the "skipemptybody" variable is
  set, outgoing messages that contain no text in their first or only part
  are not sent but silently discarded (contributed by Eygene Ryabinkin).
* Support for SMTP AUTH PLAIN has been added (contributed by Joe Feise).
  Set "smtp-auth=plain" to use it.
* When the text of an outgoing message contains illegal byte sequences
  in non-interactive mode, do not refuse sending it but send it with
  the "application/octet-stream" content type instead (thanks for the
  report and further help to Hilko Bengen).
* When an attachment that would have a "text/something" content type
  contains illegal byte sequences, it is now reliably sent out with the
  "application/octet-stream" content type instead (bugreport by
  Hilko Bengen).
* The values of the "sendcharsets" variable are now separately traversed
  for each part of a multipart message, so that if e.g. the main body can
  be represented in ISO-8859-1 but an attachment text needs UTF-8, these
  two encodings will be chosen, respectively.
* Fixed a bug that caused messages to be truncated with IMAP servers that